# md-merge

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/md_merge/: cli.py  file_handler.py  logger.py  merger.py
tests/: conftest.py  test_cli.py  test_file_handler.py  test_merger.py
